# autoformalization_with_hypothesis

./: .gitignore  Dockerfile  README.md  REPL_debug.ipynb  beq_eval_cpu.py  beq_metric_cpu.py  config.py  debug.ipynb  direct_translation_with_general_fewshot_gpt-4o_evaluated.json  encoding.ipynb  encoding.py  encoding_cpu_backup.py  encoding_retrieval.py  eval.py  eval_backup.py  generation.py  get_premises.py  main.py  premise_analysis.ipynb  requirements.txt  results_analysis.ipynb  test_repl.py  utils.py
archive_auguste/: README.md  pyproject.toml  requirements.txt
archive_auguste/configs/gpt-4-turbo-2024-04-09/: config_test.yaml  config_valid.json  config_valid.yaml
archive_auguste/configs/gpt-4o-2024-05-13/: config_pda_basic.json
archive_auguste/configs/gpt-4o-2024-05-13-50/: config_pda_random.json  config_pda_real.json  config_test.json  config_valid.json
archive_auguste/configs/gpt-4o-mini-2024-07-18/: config_valid_rag.json
archive_auguste/configs/internlm2-math-plus-7b-50/: config_valid_rag.json
archive_auguste/configs/internlm2-math-plus-comp-7b/: config_valid.json
archive_auguste/configs/internlm2-math-plus-comp-7b-50/: config_valid_few_shot_ex.json
archive_auguste/configs/internlm2_5-7b/: config_valid_single_turn.json
archive_auguste/configs/internlm2_5-7b-50/: config_valid.json  config_valid_comp.json
archive_auguste/configs/llama3-8b-50/: config_pda_random.json  config_test.json  config_valid_comp.json  config_valid_few_shot_ex.json
archive_auguste/scripts/: llemma7b_50_temperature_ablation.py
data/: 12_shot_hyp_decomp.txt  (+16 more)
(+150 files in other folders)
