[project]
name = "autoformalization_typechecking"
version = "0.0.1"
authors = []
description = "Minimal python package for autoformalization typechecking"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
